minor update - make some changes in "Take photo using Camera2 API" for an easier understanding.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,16 +36,21 @@
         <activity android:name=".IntentFlags.IntentFlagsActivity" />
         <activity android:name=".IntentFlags.IntentFlagsSecondActivity" />
         <activity android:name=".IntentFlags.IntentFlagsThirdActivity" />
+
         <activity android:name=".ExternalInternalIntentActivity" />
+
         <activity android:name=".CustomView.CreateCustomViewActivity" />
+
         <activity android:name=".PersistentStorage.PersistentStorageActivity" />
         <activity android:name=".PersistentStorage.AddNoteActivity" />
         <activity android:name=".PersistentStorage.DisplayNoteDetailsActivity" />
+
         <activity android:name=".Fragments.FragmentTopicActivity" />
         <activity android:name=".Fragments.TabLayout.TabLayoutWithFragmentsActivity" />
         <activity android:name=".Fragments.PagerTabStrip.PagerTabStripWithFragmentsActivity" />
         <activity android:name=".Fragments.FlexibleUIWithFragments.FlexibleUIWithFragmentsActivity" />
         <activity android:name=".Fragments.FlexibleUIWithFragments.DetailsActivity" />
+
         <activity android:name=".CommunicationBetweenActivities.CommunicationBetweenActivitiesActivity" />
         <activity android:name=".CommunicationBetweenActivities.UsingBundle.ReceiveDataWithBundleActivity" />
         <activity android:name=".CommunicationBetweenActivities.UsingSerializeInterface.ReceiveObjectWithSerializableInterfaceActivity" />
@@ -53,6 +58,7 @@
         <activity android:name=".CommunicationBetweenActivities.UsingParcelableInterface.ReceiveObjectWithParcelableInterface" />
         <activity android:name=".CommunicationBetweenActivities.UsingIntentOnly.ReceiveIntentDataActivity" />
         <activity android:name=".CommunicationBetweenActivities.UsingApplicationObject.ReceiveDataWithApplicationObject" />
+
         <activity android:name=".ServicesAndThreads.ServiceTopicActivity" />
         <activity android:name=".ServicesAndThreads.IntentService.IntentServiceActivity" />
 
@@ -94,6 +100,7 @@
         <activity android:name=".ServicesAndThreads.AsyncTask.AsyncTaskActivity" />
         <activity android:name=".ServicesAndThreads.HandlerThread.HandlerThreadActivity" />
         <activity android:name=".ServicesAndThreads.ThreadPoolExecutor.ThreadPoolExecutorUsingCallableActivity" />
+
         <activity android:name=".ImagesProcessing.ScaleTypeActivity" />
         <activity android:name=".ImagesProcessing.ImagesProcessingActivity" />
         <activity android:name=".ImagesProcessing.LoadImages.LoadImageFromSdCardActivity" />
@@ -101,15 +108,8 @@
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingMemoryActivity" />
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingDiskActivity" />
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingExternalLibraryActivity" />
-        <activity android:name=".ExternalHardware.ExternalHardwareTopicActivity">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
+        <activity android:name=".ExternalHardware.ExternalHardwareTopicActivity" />
         <activity android:name=".Sensors.SensorTopicActivity" />
         <activity android:name=".ExternalHardware.AudioPlayer.AudioPlayerActivity" />
         <activity android:name=".ExternalHardware.VideoPlayer.VideoPlayerUsingMediaPlayerActivity" />
@@ -118,17 +118,10 @@
         <activity android:name=".ExternalHardware.Gallery.CustomGalleryActivity" />
         <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingLocationManagerActivity" />
         <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingGooglePlayServicesActivity" />
-        <activity android:name=".ExternalHardware.Camera.TakePhotoTopicActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ExternalHardware.Camera.CameraAPI.TakePhotoUsingCameraApiActivity"
+        <activity android:name=".ExternalHardware.Camera.TakePhotoTopicActivity" />
+        <activity android:name=".ExternalHardware.Camera.CameraAPI.TakePhotoUsingCameraApiActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".ExternalHardware.Camera.TakePhotoUsingCamera2ApiActivity"></activity>
+        <activity android:name=".ExternalHardware.Camera.TakePhotoUsingCamera2ApiActivity" />
     </application>
 
 </manifest>
