minor update - add "Take photo using library camera" demo - some minor changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="tcd.training.com.trainingproject">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -28,7 +29,8 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -112,6 +114,7 @@
         <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingLocationManagerActivity" />
         <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingGooglePlayServicesActivity" />
         <activity android:name=".ExternalHardware.Camera.TakePhotoTopicActivity" />
+        <activity android:name="com.desmond.squarecamera.CameraActivity" />
         <activity
             android:name=".ExternalHardware.Camera.CameraAPI.TakePhotoUsingCameraApiActivity"
             android:screenOrientation="landscape" />
