--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
     compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.github.boxme:squarecamera:1.1.0'
     testCompile 'junit:junit:4.12'
 }
 
