--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,10 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
     compile 'com.google.android.gms:play-services:11.0.4'
     compile 'com.github.boxme:squarecamera:1.1.0'
+    compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
