--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,13 +100,13 @@
         <activity android:name=".ServicesAndThreads.AsyncTask.AsyncTaskActivity" />
         <activity android:name=".ServicesAndThreads.HandlerThread.HandlerThreadActivity" />
         <activity android:name=".ServicesAndThreads.ThreadPoolExecutor.ThreadPoolExecutorUsingCallableActivity" />
-        <activity android:name=".ImagesProcessing.ScaleTypeActivity" />
-        <activity android:name=".ImagesProcessing.ImagesProcessingActivity" />
-        <activity android:name=".ImagesProcessing.LoadImages.LoadImageFromSdCardActivity" />
-        <activity android:name=".ImagesProcessing.LoadImages.LoadImageFromUrlActivity" />
-        <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingMemoryActivity" />
-        <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingDiskActivity" />
-        <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingExternalLibraryActivity" />
+        <activity android:name=".ImageProcessing.ScaleTypeActivity" />
+        <activity android:name=".ImageProcessing.ImageProcessingActivity" />
+        <activity android:name=".ImageProcessing.LoadImages.LoadImageFromSdCardActivity" />
+        <activity android:name=".ImageProcessing.LoadImages.LoadImageFromUrlActivity" />
+        <activity android:name=".ImageProcessing.CacheImages.CacheImageUsingMemoryActivity" />
+        <activity android:name=".ImageProcessing.CacheImages.CacheImageUsingDiskActivity" />
+        <activity android:name=".ImageProcessing.CacheImages.CacheImageUsingExternalLibraryActivity" />
         <activity android:name=".ExternalHardware.ExternalHardwareTopicActivity" />
         <activity android:name=".ExternalHardware.AudioPlayer.AudioPlayerActivity" />
         <activity android:name=".ExternalHardware.VideoPlayer.VideoPlayerUsingMediaPlayerActivity" />
